switching font awesome icons to link in index.html

--- a/client/src/app/layout/header/header.component.html
+++ b/client/src/app/layout/header/header.component.html
@@ -21,7 +21,7 @@
   
   <div class="h-user">
     <div class="h-cart">
-      <fa-icon icon="shopping-cart"></fa-icon> 
+      <i class="fa fa-shopping-cart"></i>
       <div class="h-cart-len">
         <p>0</p>
       </div>
@@ -29,7 +29,7 @@
     <div>
       <div class="not-logged-in">
         <a routerLink="/login">Login</a> 
-        <fa-icon icon="sign-in-alt"></fa-icon> 
+        <i class="fa fa-user"></i>
       </div> 
     </div>
   </div>
