--- a/client/src/app/layout/header/header.component.html
+++ b/client/src/app/layout/header/header.component.html
@@ -38,6 +38,6 @@
 <div class="rs-sub-header">
   <div class="rs-sub-search">
     <input type="search" placeholder="Search Products...">
-    <fa-icon icon="search"></fa-icon>
+    <i class="fa fa-search"></i>
   </div>
 </div>
