--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,5 +1,12 @@
 
 <div class="container">
-    <app-header></app-header>
-    <app-aside></app-aside>
+     <div class="header">
+        <app-header></app-header>
+     </div>
+    <div class="aside">
+        <app-aside></app-aside>
+    </div>
+    <div class="main">
+      <app-home-main></app-home-main>
+    </div>
 </div>
