some component issues

--- a/client/src/app/layout/aside/aside.component.css
+++ b/client/src/app/layout/aside/aside.component.css
@@ -95,7 +95,7 @@ body {
 } */
 
 .products-li .submenu.open {
-  display: flex; /* Muestra el submenú cuando está abierto */
+  display: flex; 
   flex-direction: column; 
 }
 
