--- a/client/src/app/home/home-main/home-main.component.css
+++ b/client/src/app/home/home-main/home-main.component.css
@@ -22,7 +22,7 @@ main {
   
   /* RESPONSIVE CATEGORIES */
 @media(max-width: 700px) {
-  ..grid-categories {
+  .grid-categories {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
   }
