fixing src issuess

--- a/client/src/app/home/home-main/home-main.component.html
+++ b/client/src/app/home/home-main/home-main.component.html
@@ -6,32 +6,32 @@
   </div>
 
   <div class="grid-categories">
-      <div class="category smartphones" [ngStyle]="{'background-image': 'url(assets/images/istockphoto-579156228-1024x1024.jpg)'}">
+      <div class="category smartphones" style="background-image: url('/assets/images/istockphoto-579156228-1024x1024.jpg')">
           <div class="category-content">
               <h2>Smartphones</h2>
           </div>
       </div>
-      <div class="category pc" [ngStyle]="{'background-image': 'url(assets/images/istockphoto-579156228-1024x1024.jpg)'}">
+      <div class="category pc" style="background-image: url('/assets/images/istockphoto-579156228-1024x1024.jpg')">
           <div class="category-content">
               <h2>PC</h2>
           </div>
       </div>
-      <div class="category console" [ngStyle]="{'background-image': 'url(assets/images/istockphoto-530010099-1024x1024.jpg)'}">
+      <div class="category console" style="background-image: url('/assets/images/istockphoto-530010099-1024x1024.jpg')">
           <div class="category-content">
               <h2>Consoles</h2>
           </div>
       </div>
-      <div class="category gaming" [ngStyle]="{'background-image': 'url(assets/images/istockphoto-1314343964-1024x1024.jpg)'}">
+      <div class="category gaming" style="background-image: url('/assets/images/istockphoto-1314343964-1024x1024.jpg')">
           <div class="category-content">
               <h2>Gaming</h2>
           </div>
       </div>
-      <div class="category tv" [ngStyle]="{'background-image': 'url(assets/images/istockphoto-529662428-1024x1024.jpg)'}">
+      <div class="category tv" style="background-image: url('/assets/images/istockphoto-529662428-1024x1024.jpg')">
           <div class="category-content">
               <h2>TV</h2>
           </div>
       </div>
-      <div class="category accessories" [ngStyle]="{'background-image': 'url(assets/images/istockphoto-860853774-1024x1024.jpg)'}">
+      <div class="category accessories" style="background-image: url('/assets/images/istockphoto-860853774-1024x1024.jpg')">
           <div class="category-content">
               <h2>Accessories</h2>
           </div>
