--- a/client/src/app/home/home-main/home-main.component.html
+++ b/client/src/app/home/home-main/home-main.component.html
@@ -8,7 +8,7 @@
   <div class="grid-categories">
       <div class="category smartphones">
           <div class="category-content">
-               <img src="assets/images/istockphoto-579156228-1024x1024.jpg" alt=""> 
+               <img src="../../../assets/images/istockphoto-1314343964-1024x1024.jpg" alt=""> 
           </div>
       </div>
       <div class="category pc">
