--- a/client/src/app/home/home-main/home-main.component.css
+++ b/client/src/app/home/home-main/home-main.component.css
@@ -40,7 +40,7 @@ main {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
-.smartphones {
+/* .smartphones {
   background-image: url('assets/images/istockphoto-579156228-1024x1024.jpg');
 }
 
@@ -62,7 +62,7 @@ main {
 
 .accessories {
   background-image: url('assets/images/istockphoto-860853774-1024x1024.jpg');
-}
+} */
 
 /* RESPONSIVE CATEGORIES */
 @media (max-width: 700px) {
