--- a/client/src/app/home/home-main/home-main.component.html
+++ b/client/src/app/home/home-main/home-main.component.html
@@ -7,8 +7,9 @@
 
   <div class="grid-categories">
       <div class="category smartphones">
+          <img src="/assets/images/" alt="content" />
           <div class="category-content">
-                <img src="/assets/images/istockphoto-1314343964-1024x1024.jpg" alt="" />
+                
           </div>
       </div>
       <div class="category pc">
