--- a/client/src/app/home/home-main/home-main.component.css
+++ b/client/src/app/home/home-main/home-main.component.css
@@ -14,6 +14,11 @@ main {
   gap: 20px;
 }
 
+.grid-categories img {
+    width: 100%;
+    height: 100%;
+}
+
 .category {
   position: relative;
   overflow: hidden;
