image src issues

--- a/client/src/app/home/home-main/home-main.component.html
+++ b/client/src/app/home/home-main/home-main.component.html
@@ -7,7 +7,7 @@
 
   <div class="grid-categories">
       <div class="category smartphones">
-          <img src="/assets/images/" alt="content" />
+          <img src="/assets/images/istockphoto-1314343964-1024x1024.jpg" alt="content" />
           <div class="category-content">
                 
           </div>
