--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -1,1 +1,15 @@
-<p>admin works!</p>
+<!-- this is the admin page --> 
+<div class="container">
+  <div class="header">
+     <app-header></app-header>
+  </div>
+  <div class="aside">
+     <app-admin-aside></app-admin-aside>
+  </div>
+  <div class="main">
+      <router-outlet></router-outlet>
+  </div>
+  <div class="footer">
+      
+  </div>
+</div>
