--- a/client/src/app/home/home-main/home-main.component.html
+++ b/client/src/app/home/home-main/home-main.component.html
@@ -7,14 +7,14 @@
 
   <div class="grid-categories">
       <div class="category smartphones">
-          <img src="./assets/images/istockphoto-1314343964-1024x1024.jpg" alt="content" />
+          
           <div class="category-content">
-                
+                <h2>Smartphones</h2>
           </div>
       </div>
       <div class="category pc">
           <div class="category-content">
-              <h2>PC</h2>
+             <h2>PC</h2>
           </div>
       </div>
       <div class="category console">
