preparing admin page users, products, sales etc

--- a/client/src/app/admin/admin-orders/admin-orders.component.html
+++ b/client/src/app/admin/admin-orders/admin-orders.component.html
@@ -1,1 +1,44 @@
-<p>admin-orders works!</p>
+<main> 
+    
+    <div style="overflow-x: auto;">
+      
+      
+    <table border="1" cellspacing="0" cellpadding="5">
+        <thead>
+            <tr>
+                <th>Image</th>
+                <th>Product</th>
+                <th>Order ID</th>
+                <th>Order Date</th>
+                <th>Username</th>
+                <th>User Email</th>
+                <th>Status</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><img src="Screenshot_20240928-011835.png" alt="Producto" width="50" height="50"></td>
+                <td>Calcetines Unicornio</td>
+                <td>1239283826</td>
+                <td>17/10/2024</td>
+                <td>Juanito Pérez</td>
+                <td>juanito@example.com</td>
+                <td>Pending</td>
+                <td>
+                  <button class="action-onWay">
+                    <i class="fa fa-truck"></i>
+                  </button>
+                  <button class="action-arrived">
+                    <i class="fa fa-box-open"></i>
+                  </button>
+                </td>
+            </tr>
+           
+        </tbody>
+    </table>
+    
+    
+    </div>
+    
+    </main>
