--- a/client/src/app/admin/admin-products/admin-products.component.html
+++ b/client/src/app/admin/admin-products/admin-products.component.html
@@ -1,1 +1,52 @@
-<p>admin-products works!</p>
+<main>
+    
+    <div style="overflow-x: auto;">
+      
+      
+    <table border="1">
+      <thead>
+        <tr>
+          <th>PID</th>
+          <th>Image</th>
+          <th>Title</th>
+          <th>Description</th>
+          <th>Category</th>
+          <th>Price</th>
+          <th>Stock</th>
+          <th>Status</th>
+          <th>Creation Date</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>78</td>
+          <td><img 
+          style="width: 30px; height: 30px; object-fit: cover;"
+          src="Screenshot_20240928-011835.png" alt=""></td>
+          <td>Something</td>
+          <td>Description here</td>
+          <td>Phones</td>
+          <td>180$</td>
+          <td>5</td>
+          <td>online</td>
+          <td>10/7/2024</td>
+          <td>
+            <button class="actions-see">
+              <i class="fa fa-eye"></i>
+            </button>
+            <button class="actions-edit">
+              <i class="fa fa-edit"></i>
+            </button>
+            <button class="actions-feature">
+              <i class="fa fa-star"></i>
+            </button>
+            <button class="actions-delete">
+              <i class="fa fa-trash"></i>
+            </button>
+          </td>
+    
+        </tr>
+        
+      </tbody>
+    </table>
