--- a/client/src/app/admin/admin-sales/admin-sales.component.html
+++ b/client/src/app/admin/admin-sales/admin-sales.component.html
@@ -1,1 +1,54 @@
-<p>admin-sales works!</p>
+<main> 
+    
+    <div style="overflow-x: auto;">
+      
+      
+    <table border="1">
+        <thead>
+            <tr>
+                <th>Image</th>
+                <th>Product</th>
+                <th>Sale ID</th>
+                <th>Amount</th>
+                <th>Username</th>
+                <th>Date</th>
+                <th>Payment</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><img src="Screenshot_20240928-011835.png" alt="Producto 1"></td>
+                <td>Producto 1</td>
+                <td>001</td>
+                <td>$20.00</td>
+                <td>Usuario 1</td>
+                <td>2024-10-17</td>
+                <td>Tarjeta de Crédito</td>
+            </tr>
+            <tr>
+                <td><img src="Screenshot_20240928-011835.png" ></td>
+                <td>Producto 2</td>
+                <td>002</td>
+                <td>$15.00</td>
+                <td>Usuario 2</td>
+                <td>2024-10-16</td>
+                <td>PayPal</td>
+            </tr>
+            <tr>
+                <td><img src="Screenshot_20240928-011835.png"></td>
+                <td>Producto 3</td>
+                <td>003</td>
+                <td>$30.00</td>
+                <td>Usuario 3</td>
+                <td>2024-10-15</td>
+                <td>Efectivo</td>
+            </tr>
+          
+        </tbody>
+    </table>
+    
+    
+    
+    </div>
+    
+    </main>
