--- a/client/src/app/admin/admin-users/admin-users.component.html
+++ b/client/src/app/admin/admin-users/admin-users.component.html
@@ -1,1 +1,59 @@
-<p>admin-users works!</p>
+<main> 
+    <div style="overflow-x: auto;">
+        <table class="users-table" border="1">
+            <thead>
+                <tr>
+                    <th>Pic</th>
+                    <th>User ID</th>
+                    <th>Name</th>
+                    <th>Mail</th>
+                    <th>Spent</th>
+                    <th>Joined Date</th>
+                    <th>Last Login</th>
+                    <th>Banned</th>
+                    <th>Actions</th> 
+                </tr>
+            </thead>
+            <tbody>
+              
+              <tr>
+                
+                <td>
+                  <img style="width: 30px; height: 30px; object-fit: cover; border-radius: 50%" src="Screenshot_20240928-011835.png" alt="">
+                </td>
+                <td>
+                  1
+                </td>
+                <td>
+                  Maria
+                </td>
+                <td>
+                  maria777@gmail.com
+                </td>
+                <td>
+                  23,65€
+                </td>
+                <td>
+                  18/8/2023
+                </td>
+                <td>
+                  23/9/2023
+                </td>
+                <td>
+                  Yes
+                </td>
+                <td class="actions">
+                  <button class="actions-profile">
+                    <i class="fa fa-user"></i>
+                  </button>
+                  <button class="actions-ban">
+                    <i class="fa fa-ban"></i>
+                  </button>
+                </td>
+              </tr>
+    
+            </tbody>
+        </table>
+    </div>
+    
+</main>
