--- a/client/src/app/admin/admin-orders/admin-orders.component.html
+++ b/client/src/app/admin/admin-orders/admin-orders.component.html
@@ -23,7 +23,7 @@
                 <td>1239283826</td>
                 <td>17/10/2024</td>
                 <td>Juanito Pérez</td>
-                <td>juanito@example.com</td>
+                <td>juanito&#64;example.com</td>
                 <td>Pending</td>
                 <td>
                   <button class="action-onWay">
