--- a/client/src/app/admin/admin-users/admin-users.component.html
+++ b/client/src/app/admin/admin-users/admin-users.component.html
@@ -28,7 +28,7 @@
                   Maria
                 </td>
                 <td>
-                  maria777@gmail.com
+                  maria777&#64;gmail.com
                 </td>
                 <td>
                   23,65€
