--- a/client/src/app/admin/admin-create-product/admin-create-product.component.html
+++ b/client/src/app/admin/admin-create-product/admin-create-product.component.html
@@ -32,7 +32,7 @@
           <label for="Featured">Featured</label>
         </div>
         <div class="publish-btn">
-          <button (click)="createProduct">Publish</button>
+          <button (click)="createProduct()">Publish</button>
         </div>
       </form>
     </div>
