--- a/client/src/app/admin/admin-create-product/admin-create-product.component.html
+++ b/client/src/app/admin/admin-create-product/admin-create-product.component.html
@@ -9,38 +9,38 @@
         <div class="inp">
           <label for="Title">Title</label>
           <input type="text" formControlName="title" placeholder="Title">
-          <div *ngIf="productForm.get('title')?.invalid && (productForm.get('title').touched)">
-            <small *ngIf="productForm.get('title').errors?.required">Title is required.</small>
+          <div *ngIf="productForm.get('title')?.invalid && productForm.get('title')?.touched">
+            <small *ngIf="productForm.get('title')?.errors?.['required']">Title is required.</small>
           </div>
         </div>
         
         <div class="inp">
           <label for="Description">Description</label>
           <input type="text" formControlName="description" placeholder="Description">
-          <div *ngIf="productForm.get('description')?.invalid && (productForm.get('description').touched)">
-            <small *ngIf="productForm.get('description').errors?.required">Description is required.</small>
+          <div *ngIf="productForm.get('description')?.invalid && productForm.get('description')?.touched">
+            <small *ngIf="productForm.get('description')?.errors?.['required']">Description is required.</small>
           </div>
         </div>
         
         <div class="inp-images">
-          <!-- Here the admins can choose the images for the product -->
+          <!-- Here the admins can chose the images for the product -->
           <app-create-product-images></app-create-product-images>
         </div>
 
         <div class="inp">
           <label for="Category">Category</label>
           <input type="text" formControlName="category" placeholder="Category">
-          <div *ngIf="productForm.get('category')?.invalid && (productForm.get('category').touched)">
-            <small *ngIf="productForm.get('category').errors?.required">Category is required.</small>
+          <div *ngIf="productForm.get('category')?.invalid && productForm.get('category')?.touched">
+            <small *ngIf="productForm.get('category')?.errors?.['required']">Category is required.</small>
           </div>
         </div>
         
         <div class="inp">
           <label for="Price">Price</label>
           <input type="text" formControlName="price" placeholder="Price USD">
-          <div *ngIf="productForm.get('price')">
-            <small *ngIf="productForm.get('price').errors && productForm.get('price').errors['required']">Price is required.</small>
-            <small *ngIf="productForm.get('price').errors && productForm.get('price').errors['pattern']">Price must be a valid number.</small>
+          <div *ngIf="productForm.get('price')?.errors">
+            <small *ngIf="productForm.get('price')?.errors?.['required']">Price is required.</small>
+            <small *ngIf="productForm.get('price')?.errors?.['pattern']">Price must be a valid number.</small>
           </div>
         </div>
 
@@ -50,7 +50,7 @@
         </div>
 
         <div class="publish-btn">
-          <button type="submit" [disabled]="productForm.invalid">Publish</button> <!-- Disable button if form is invalid -->
+          <button type="submit" [disabled]="productForm.invalid">Publish</button> <!-- disabled if form is not valid -->
         </div>
       </form>
     </div>
