--- a/client/src/app/admin/admin-create-product/admin-create-product.component.html
+++ b/client/src/app/admin/admin-create-product/admin-create-product.component.html
@@ -10,7 +10,7 @@
           <label for="Title">Title</label>
           <input type="text" formControlName="title" placeholder="Title">
           <div *ngIf="productForm.get('title')?.invalid && productForm.get('title')?.touched">
-            <small *ngIf="productForm.get('title')?.errors?.['required']">Title is required.</small>
+            <small class="val-error" *ngIf="productForm.get('title')?.errors?.['required']">Title is required.</small>
           </div>
         </div>
         
@@ -18,7 +18,7 @@
           <label for="Description">Description</label>
           <input type="text" formControlName="description" placeholder="Description">
           <div *ngIf="productForm.get('description')?.invalid && productForm.get('description')?.touched">
-            <small *ngIf="productForm.get('description')?.errors?.['required']">Description is required.</small>
+            <small class="val-error" *ngIf="productForm.get('description')?.errors?.['required']">Description is required.</small>
           </div>
         </div>
         
@@ -31,7 +31,7 @@
           <label for="Category">Category</label>
           <input type="text" formControlName="category" placeholder="Category">
           <div *ngIf="productForm.get('category')?.invalid && productForm.get('category')?.touched">
-            <small *ngIf="productForm.get('category')?.errors?.['required']">Category is required.</small>
+            <small class="val-error" *ngIf="productForm.get('category')?.errors?.['required']">Category is required.</small>
           </div>
         </div>
         
@@ -40,7 +40,7 @@
           <input type="text" formControlName="price" placeholder="Price USD">
           <div *ngIf="productForm.get('price')?.errors">
             <small *ngIf="productForm.get('price')?.errors?.['required']">Price is required.</small>
-            <small *ngIf="productForm.get('price')?.errors?.['pattern']">Price must be a valid number.</small>
+            <small class="val-error" *ngIf="productForm.get('price')?.errors?.['pattern']">Price must be a valid number.</small>
           </div>
         </div>
 
