--- a/client/src/app/admin/admin-create-product/admin-create-product.component.html
+++ b/client/src/app/admin/admin-create-product/admin-create-product.component.html
@@ -1,10 +1,7 @@
 <main>
-   <!-- Success, Error And Loading -->
-
-  <app-loading-component *ngIf="isLoading" [message]="Creating Product, Please Wait..."></app-loading-component>
-
+  <!-- Success, Error And Loading -->
+  <app-loading-component *ngIf="isLoading" [message]="'Creating Product, Please Wait...'"></app-loading-component>
   <app-success-component *ngIf="successMessage" [message]="successMessage"></app-success-component>
-
   <app-error-component *ngIf="errorMessage" [message]="errorMessage"></app-error-component>
 
   <div class="mh">
@@ -31,7 +28,6 @@
         </div>
         
         <div class="inp-images">
-          <!-- Here the admins can chose the images for the product -->
           <app-create-product-images></app-create-product-images>
         </div>
 
