--- a/client/src/app/admin/admin-create-product/create-product-images/create-product-images.component.html
+++ b/client/src/app/admin/admin-create-product/create-product-images/create-product-images.component.html
@@ -4,12 +4,14 @@
     <!-- Loop through the images array and display each image -->
     <div class="image" *ngFor="let image of images; let i = index">
       <img [src]="image" alt="Product Image">  <!-- Display the image -->
-      <button (click)="removeImage(i)">Remove</button> 
-    </div>
+      <div class="close-image" (click)="removeImage(i)">
+        <i class="fa fa-close"></i>
+      </div>
+    </div> 
   </div>
   <div class="add-image" (click)="triggerFileInput()">
     <!-- File input to allow the user to select an image -->
     <input type="file" #fileInput (change)="onFileSelected($event)" style="display: none;">
-    <i class="fa fa-plus"></i> Add Image  <!-- Icon/button for adding images -->
+    <i class="fa fa-plus"></i>  <!-- Icon/button for adding images -->
   </div>
 </div>
