Adding more clean code

--- a/client/src/app/admin/admin-create-product/admin-create-product.component.html
+++ b/client/src/app/admin/admin-create-product/admin-create-product.component.html
@@ -1,8 +1,10 @@
 <main>
-  <!-- Success, Error And Loading -->
+  <!-- Success, Error And Loading 
   <app-loading-component *ngIf="isLoading" [message]="'Creating Product, Please Wait...'"></app-loading-component>
   <app-success-component *ngIf="successMessage" [message]="successMessage"></app-success-component>
   <app-error-component *ngIf="errorMessage" [message]="errorMessage"></app-error-component>
+  
+  -->
 
   <div class="mh">
     <h2>Create Product</h2>
