--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -1,4 +1,3 @@
-<!-- this is the admin page --> 
 <div class="container">
   <div class="header">
      <app-header></app-header>
@@ -7,21 +6,22 @@
      <app-admin-aside></app-admin-aside>
   </div>
   <div class="main">
-    <app-loading-component *ngIf="adminStateManager.isLoading$ | async" class="loading-spinner">
+
+    <app-loading-component *ngIf="loading$ | async" class="loading-spinner">
       Cargando...
     </app-loading-component>
-    
-    <app-error-component *ngIf="adminStateManager.errorMessage$ | async as errorMessage" class="error-message">
+
+    <app-error-component *ngIf="error$ | async as errorMessage" class="error-message">
       {{ errorMessage }}
     </app-error-component>
-    
-    <app-success-component  *ngIf="adminStateManager.successMessage$ | async as successMessage" class="success-message">
+
+    <app-success-component *ngIf="success$ | async as successMessage" class="success-message">
       {{ successMessage }}
     </app-success-component>
-    
+
     <router-outlet (activate)="onActivate($event)"></router-outlet>
   </div>
   <div class="footer">
-      
+    <!-- I will make the footer Component, but not now -->
   </div>
 </div>
