Saving some bug fixes and UI improvements.

--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -7,16 +7,14 @@
   </div>
   <div class="main">
 
+  <!-- I dont have to use this components on al the admin's pages, we are using ngrx to handle it all on the admin-page.component.ts -->
     <app-loading-component *ngIf="loading$ | async" class="loading-spinner">
-      Cargando...
-    </app-loading-component>
+   </app-loading-component>
 
-    <app-error-component *ngIf="error$ | async as errorMessage" class="error-message">
-      {{ errorMessage }}
-    </app-error-component>
+   <app-error-component *ngIf="error$ | async as errorMessage" [errorMessage]="errorMessage" class="error-message">
+   </app-error-component>
 
-    <app-success-component *ngIf="success$ | async as successMessage" class="success-message">
-      {{ successMessage }}
+    <app-success-component *ngIf="success$ | async as successMessage" [successMessage]="successMessage" class="success-message">
     </app-success-component>
 
     <router-outlet (activate)="onActivate($event)"></router-outlet>
