--- a/client/src/app/layout/success-component/success-component.component.css
+++ b/client/src/app/layout/success-component/success-component.component.css
@@ -6,9 +6,9 @@
     align-items: center;
     justify-content: center;
     padding: 20px;
-    border-radius: 10px; 
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); 
     position: fixed;
     top: 0;
     left: 0;
+    color: white;
 }
