--- a/client/src/app/admin/admin-create-product/admin-create-product.component.html
+++ b/client/src/app/admin/admin-create-product/admin-create-product.component.html
@@ -6,8 +6,6 @@
   <div class="wrapper">
     <div class="create-product-form">
       <form [formGroup]="productForm" (ngSubmit)="createProduct()">
-        
-        <!-- Title input -->
         <div class="inp">
           <label for="Title">Title</label>
           <input type="text" formControlName="title" placeholder="Title">
@@ -16,7 +14,6 @@
           </div>
         </div>
         
-        <!-- Description input -->
         <div class="inp">
           <label for="Description">Description</label>
           <input type="text" formControlName="description" placeholder="Description">
@@ -25,15 +22,13 @@
           </div>
         </div>
         
-        <!-- Images input -->
         <div class="inp-images">
-          <app-create-product-images formControlName="pictures"></app-create-product-images>
+          <app-create-product-images></app-create-product-images>
           <div *ngIf="productForm.get('pictures')?.invalid && productForm.get('pictures')?.touched">
             <small class="val-error" *ngIf="productForm.get('pictures')?.errors?.['emptyArray']">At least one image is required.</small>
           </div>
         </div>
 
-        <!-- Category input -->
         <div class="inp">
           <label for="Category">Category</label>
           <input type="text" formControlName="category" placeholder="Category">
@@ -42,27 +37,23 @@
           </div>
         </div>
         
-        <!-- Price input -->
         <div class="inp">
           <label for="Price">Price</label>
-          <input type="number" formControlName="price" placeholder="Price USD">
-          <div *ngIf="productForm.get('price')?.invalid && productForm.get('price')?.touched">
+          <input type="text" formControlName="price" placeholder="Price USD">
+          <div *ngIf="productForm.get('price')?.errors">
             <small *ngIf="productForm.get('price')?.errors?.['required']">Price is required.</small>
             <small class="val-error" *ngIf="productForm.get('price')?.errors?.['invalidPrice']">Price must be a valid number greater than 0.</small>
           </div>
         </div>
 
-        <!-- Featured checkbox -->
         <div class="inp-featured">
           <input type="checkbox" formControlName="featured">
           <label for="Featured">Featured</label>
         </div>
 
-        <!-- Submit button -->
         <div class="publish-btn">
-          <button type="submit" [disabled]="productForm.invalid">Publish</button>
+          <button type="submit" [disabled]="productForm.invalid">Publish</button> <!-- disabled if form is not valid -->
         </div>
-
       </form>
     </div>
   </div>
